--- a/src/PlateformInballBundle/Resources/views/Home/index.html.twig
+++ b/src/PlateformInballBundle/Resources/views/Home/index.html.twig
@@ -1,7 +1,7 @@
+{% extends 'PlateformInballBundle::layout.html.twig' %}
 
-<html>
-<body>
+{% block body %}
 Bienvenue sur la page d'accueil
+{% endblock body %}
 
-</body>
-</html>
+
