--- a/src/UserBundle/Resources/views/Security/inscription.html.twig
+++ b/src/UserBundle/Resources/views/Security/inscription.html.twig
@@ -1,5 +1,5 @@
 {% block body %}
-
+Inscription
   {# S'il y a une erreur, on l'affiche dans un joli cadre #}
   {% if error %}
     <div class="alert alert-danger">{{ error.message }}</div>
